<resources>
    <string name="app_name">Drive Next</string>
    <string name="app_description">Поможем найти твою следующую поездку</string>
    <string name="skip_button">Пропустить</string>
    <string name="next_button">Далее</string>
    <string name="login_button">Войти</string>
    <string name="signup_button">Зарегистрироваться</string>
    <string name="no_internet">Нет подключения к интернету</string>
    <string name="no_internet_short">Нет подключения</string>
    <string name="check_internet">Проверьте подключение и повторите попытку</string>
    <string name="retry_button">Повторить попытку</string>
    <string name="signup_success_message">Поздравляем\nВы успешно зарегистрировались. Обработка ваших персональных данных займет около двух часов. Спасибо за ожидание.</string>
    <string name="create_account_button">Создать аккаунт</string>
    <string name="email_hint">Электронная почта</string>
    <string name="password_hint">Введите пароль</string>
    <string name="repeat_password_hint">Повторите пароль</string>
    <string name="confidential_rb">Я согласен с условиями обслуживания и политикой конфиденциальности.</string>
    <string name="ln_hint">Фамилия</string>
    <string name="name_hint">Имя</string>
    <string name="fn_hint">Отчество</string>
    <string name="birth_hint">Дата рождения</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="dl_number">Номер водительского удостоверения</string>
    <string name="dl_date">Дата выдачи</string>
    <string name="dl_photo">Загрузить фото водительского удостоверения</string>
    <string name="passport_photo">Загрузить фото паспорта</string>
    <string name="app_slogan">Аренда автомобилей</string>
    <string name="app_slogan_long">Открой для себя удобный и доступный способ передвижения</string>
    <string name="invalid_email_error">Введите корректный email</string>
    <string name="password_doesnt_match_error">Пароли не совпадают</string>
    <string name="confidential_not_accepted">Вы должны согласиться с условиями</string>
    <string name="onboarding_1_t">Аренда автомобилей</string>
    <string name="onboarding_1_d">Открой для себя удобный и доступный способ передвижения</string>
    <string name="onboarding_2_t">Безопасно и удобно</string>
    <string name="onboarding_2_d">Арендуй автомобиль и наслаждайся его удобством</string>
    <string name="onboarding_3_t">Лучшие предложения</string>
    <string name="onboarding_3_d">Выбирай понравившееся среди сотни доступных автомобилей</string>
    <string name="fill_all_fields_error">Заполните все поля</string>
</resources>