<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@color/white">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/internet"
        android:contentDescription="@string/no_internet_short"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_internet"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/mainColor"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_internet"
        android:textSize="16sp"
        android:textColor="@color/mainColor"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/retryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retry_button"
        android:padding="12dp"
        android:backgroundTint="@color/mainColor"
        android:textColor="@android:color/white"/>
</LinearLayout>
